syntax = "proto3";

package substreams.entity.v1;

message EntityChanges {
  repeated EntityChange entity_changes = 1;
}

message EntityChange {
  string entity = 1;
  string id = 2;
  uint64 ordinal = 3 [deprecated = true];
  Operation operation = 4;
  repeated Field fields = 5;

  enum Operation {
    OPERATION_UNSPECIFIED = 0;
    OPERATION_CREATE = 1;
    OPERATION_UPDATE = 2;
    OPERATION_DELETE = 3;
  }
}

message Field {
  string name = 1;
  string new_value = 2;
  string old_value = 3 [deprecated = true];
}
